--- a/FactionsX/config/map-config.json
+++ b/FactionsX/config/map-config.json
@@ -7,23 +7,23 @@
   "mapYouAreHere": "&8+",
   "mapWildernessChar": "-",
   "systemFactionMapToolTip": [
-    "&6Tag &l&7Â» &6{tag}",
+    "&6Tag &l&7» &6{tag}",
     "&7",
     "&8&o(( &7&oClick to claim &8&o))"
   ],
   "mapTooltip": [
-    "&7Tag &l&7Â» &6{tag}",
-    "&7Leader &l&7Â» &6{leader}",
-    "&7Claims &l&7Â» &6{claims}&7/&6{max-claims}",
-    "&7Power &l&7Â» &6{faction-power}&7/&6{faction-max-power}",
+    "&7Tag &l&7» &6{tag}",
+    "&7Leader &l&7» &6{leader}",
+    "&7Claims &l&7» &6{claims}&7/&6{max-claims}",
+    "&7Power &l&7» &6{faction-power}&7/&6{faction-max-power}",
     "&7",
     "&8&o(( &7&oClick to claim &8&o))"
   ],
   "ownFactionMapToolTip": [
-    "&7Tag &l&7Â» &6{tag}",
-    "&7Leader &l&7Â» &6{leader}",
-    "&7Claims &l&7Â» &6{claims}&7/&6{max-claims}",
-    "&7Power &l&7Â» &6{faction-power}&7/&6{faction-max-power}",
+    "&7Tag &l&7» &6{tag}",
+    "&7Leader &l&7» &6{leader}",
+    "&7Claims &l&7» &6{claims}&7/&6{max-claims}",
+    "&7Power &l&7» &6{faction-power}&7/&6{faction-max-power}",
     "&7",
     "&8&o(( &7&oClick to unclaim &8&o))"
   ],
